src/css/footer.css
.footer {
  width: 100%;
  padding-top: 40px;
  padding-bottom: 10px;
  font-family: var(--font-main);
  background-color: var(--color-primary);
  color: var(--color-background);
}

.footer-container {
  display: flex;
  flex-direction: column;
}

.footer-logo-and-social{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 20px;
  margin-bottom: 40px;
}

.footer-logo {
  display: inline-block;
  color: var(--color-background); 
  transition: transform var(--transition), color var(--transition);
}

.footer-logo:hover,
.footer-logo:focus {
  transform: scale(1.1);
}

.footer-logo-icon {
  fill: currentColor;
}

.footer-social-list {
  display: flex;
  gap: 12px;
}

.footer-icon {
  display: flex;
  align-items: center;
  justify-content: center;

  width: 40px;
  height: 40px;

  border: 1px solid var(--color-border-icon);
  border-radius: 10px;

  background-color: transparent;
  color: var(--color-background);
  
  transition: background-color var(--transition), border-color var(--transition), color var(--transition);
}

.footer-svg {
  width: 24px;
  height: 24px;
}

.footer-icon:hover,
.footer-icon:focus {
  background-color: var(--color-background);
  border-color: var(--color-background);
  color: var(--color-primary);
  transform: scale(1.1);
}

.footer-form {
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin-bottom: 120px;
}

.footer-text {
  font-weight: 400;
  font-size: 38px;
  line-height: 1.16;
  letter-spacing: -0.02em;
}

.form-text {
  font-weight: 400;
  font-size: 14px;
  line-height: 1.29;
  letter-spacing: 0;
}
  
.subscription-form label {
  display: flex;
  flex-direction: column;
  gap: 20px; 
}

.footer-subscribe-text {
  font-weight: 400;
  font-size: 14px;
  line-height: 1.29;
  letter-spacing: 0;
  margin-bottom: 20px;
}

.subscribe-input {
  width: 100%;
  border-radius: 30px;
  padding: 12px 16px;
  margin-bottom: 20px;
  border: 1px solid var(--color-background);
  background: transparent;
  color: var(--color-background);
}

.subscribe-input::placeholder {
  font-family: inherit;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.28;
  letter-spacing: 0;
  color: var(--color-email);
}

.subscribe-btn {
  width: 100%;
  border-radius: 30px;
  padding: 12px;
  background: var(--color-background);
  color: var(--color-primary);

  font-weight: 400;
  font-size: 14px;
  line-height: 1.28;
  letter-spacing: 0px;
}

.subscribe-btn:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.footer-bottom {
  font-size: 14px;
  color: var(--color-copyright);
  
}
.footer-bottom-p {
  margin-bottom: 10px;
}

.footer-links-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.footer-links {
  display: flex;
  gap: 8px;
  list-style: none;
  padding: 0;
  margin: 0;
}

.footer-links .policy {
  color: var(--color-copyright);
  text-decoration: none;
}

.footer-links .policy:hover {
  text-decoration: underline;
}

.copyright {
  margin: 0;
  color: var(--color-copyright);
}



@media screen and (min-width: 768px) {
  .footer {
    padding-top: 64px;
  }

  .footer-content {
    display: flex;
    flex-direction: row;
    gap: 114px;
  }

  .footer-logo-and-social {
    flex-direction: column;
    gap: 32px;
    align-items: flex-start;
    margin-bottom: 0;
  }

  .footer-icon {
    width: 44px; 
    height: 44px; 
  }

  .footer-text {
    font-size: 56px;
    line-height: 1.07;
    text-align: left;
    width: 434px;
    margin-bottom: 32px;
  }

  .footer-form {
    margin-bottom: 64px;
  }

  .footer-subscribe {
    width: 360px;
  }

  .form-text {
    font-size: 18px;
    line-height: 1.33;
  }

  .subscribe-input, .subscribe-btn {
    width: 352px;
    height: 48px;
  }

  .footer-bottom {
    display: flex;
    align-items: center;
    gap: 78px; 
  }
  
  .footer-links-wrapper{
    margin-top: 0;
    white-space: nowrap;
  }

  .footer-bottom-p {
    margin-bottom: 0;
    white-space: nowrap;
  }

}

@media screen and (min-width: 1440px) {
  .footer-form {
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    gap: 115px;
    margin-bottom: 0;
  } 

  .footer-content{
    gap: 158px;
    margin-bottom: 70px;
  }

  .footer-text {
    width: 595px;
    margin-bottom: 0;
  }

  .footer-bottom{
    display: flex;
    flex-direction: row;
    gap: 115px;
    margin-bottom: 16px;
  }
  
  .footer-links-wrapper {
    margin-top: 0;
    justify-content: unset;
    flex-direction: row;
    gap: 498px;
  }
  .subscription-form {
    width: 352px;
  }
} 

